fix mobile spacing issue

--- a/static/css/attraction.css
+++ b/static/css/attraction.css
@@ -274,6 +274,9 @@
     .main{
         width: 100%;
     }
+    .horizontal-line--top-setting{
+        display: none;
+    }
     .image-panel{
         width: 100%;
         padding-left: 0px;
